--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,7 +12,10 @@
 <body>
     <div class = "main-content">
         {{>header}}
-        <p>this is about help page</p>
+        <h1>HELP PAGE FOR KARTIK JUGRAN</h1>
+        <p>Save our friend kartik Jugran from cancer</p>
+        <p>Plz Donate</p>
+        <img class="portrait" src = "/img/kartik.jpeg" >
 
     </div>
     
