--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,8 +12,8 @@
 <body>
     <div class = "main-content">
         {{>header}}
-        <h1>HELP PAGE FOR KARTIK JUGRAN</h1>
-        <p>Save our friend kartik Jugran from cancer</p>
+        <h1>HELP PAGE FOR Yogesh Negi</h1>
+        <p>Save our friend Yogesh from cancer</p>
         <p>Plz Donate</p>
         <img class="portrait" src = "/img/kartik.jpeg" >
 
