--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,10 +12,8 @@
 <body>
     <div class = "main-content">
         {{>header}}
-        <h1>HELP PAGE FOR Yogesh Negi</h1>
-        <p>Save our friend Yogesh from cancer</p>
-        <p>Plz Donate</p>
-        <img class="portrait" src = "/img/kartik.jpeg" >
+       <p>this is About page</p>
+        
 
     </div>
     
