--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,8 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <h1>DHOKEBAZZ SAKARWAL</h1>
-        <img class="portrait" src = "/img/sakar.jpg" >
+        <img class="portrait" src = "/img/robot.png" >
 
     </div>
     
